<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dilation_contraction.DilationContraction">

    <TextView
        android:id="@+id/text_dilation_contraction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dilation_contraction_title"
        android:textColor="@color/black_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_animation_series"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200" />

    <TextView
        android:id="@+id/text_animation_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any_text"
        android:textColor="@color/black_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/b_start_appearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dilation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/b_start_disappearance"
        app:layout_constraintTop_toBottomOf="@id/text_animation_series"
        app:layout_constraintVertical_bias="0.800" />

    <Button
        android:id="@+id/b_start_disappearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_contraction"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/b_start_appearance"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_animation_series"
        app:layout_constraintVertical_bias="0.800"/>

</androidx.constraintlayout.widget.ConstraintLayout>