<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.translation.TranslationFragment">



    <TextView
        android:id="@+id/text_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:text="@string/translation"
        android:textColor="@color/black_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <Button
        android:id="@+id/b_t_right"
        android:layout_width="121dp"
        android:layout_height="69dp"
        android:text="@string/right_translation"
        tools:layout_editor_absoluteX="238dp"
        tools:layout_editor_absoluteY="569dp"
        app:layout_constraintTop_toBottomOf="@id/text_translation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/b_t_left"/>

    <Button
        android:id="@+id/b_t_left"
        android:layout_width="121dp"
        android:layout_height="69dp"
        android:text="@string/left_translation"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="569dp"
        app:layout_constraintTop_toBottomOf="@id/text_translation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/b_t_right" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translation_title"
        android:textColor="@color/black_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_translation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.200" />

</androidx.constraintlayout.widget.ConstraintLayout>